// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Editor/> should call the correct callbacks when removing a button 1`] = `
Array [
  Array [
    "removeEditedWidget",
    "some.template.meta.custom.buttons",
    Array [
      "some",
      "absolute",
      "template",
    ],
  ],
  Array [
    "startWidgetEdition",
    "some.template.meta.custom.buttons",
  ],
  Array [
    "updateCustomActions",
    Array [
      Object {
        "action": Object {
          "body": Object {
            "application/json": Object {},
            "application/x-www-form-urlencoded": Array [],
            "contentType": "application/json",
          },
          "headers": Array [],
          "method": "GET",
          "params": Array [],
          "url": "www.someurl.com",
        },
        "label": "I am in snapshots",
      },
    ],
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when submitting a edited button 1`] = `
Array [
  Array [
    "startWidgetEdition",
    "some.template.meta.custom.buttons",
  ],
  Array [
    "updateCustomActions",
    Array [
      Object {
        "action": Object {
          "body": Object {
            "application/json": Object {},
            "application/x-www-form-urlencoded": Array [],
            "contentType": "application/json",
          },
          "headers": Array [],
          "method": "GET",
          "params": Array [],
          "url": "www.someurl.com",
        },
        "label": "I am in snapshots",
      },
      Object {
        "action": Object {
          "body": Object {
            "application/json": Object {},
            "application/x-www-form-urlencoded": Array [],
            "contentType": "application/json",
          },
          "headers": Array [],
          "method": "GET",
          "params": Array [],
          "url": "www.someurl.com",
        },
        "label": "I am in snapshots too",
      },
    ],
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when submitting a new button 1`] = `
Array [
  Array [
    "startWidgetEdition",
    "some.template.meta.custom.buttons",
  ],
  Array [
    "updateCustomActions",
    Array [
      Object {
        "action": Object {
          "body": Object {
            "application/json": Object {},
            "application/x-www-form-urlencoded": Array [],
            "contentType": "application/json",
          },
          "headers": Array [],
          "method": "GET",
          "params": Array [],
          "url": "www.someurl.com",
        },
        "label": "I am in snapshots",
      },
      Object {
        "action": Object {
          "body": Object {
            "application/json": Object {},
            "application/x-www-form-urlencoded": Array [],
            "contentType": "application/json",
          },
          "headers": Array [],
          "method": "GET",
          "params": Array [],
          "url": "www.someurl.com",
        },
        "label": "I am in snapshots too",
      },
      Object {
        "action": Object {
          "body": Object {
            "application/json": Object {},
            "application/x-www-form-urlencoded": Array [],
            "contentType": "application/json",
          },
          "headers": Array [],
          "method": "GET",
          "params": Array [],
          "url": "",
        },
        "label": "ok",
      },
    ],
  ],
]
`;

exports[`<Editor/> should render with buttons and "add button" button 1`] = `
<div>
  <ul
    class="list-group list-group-flush"
  >
    <li
      class="editRow list-group-item"
    >
      <button
        class="btn btn-secondary"
        type="button"
      >
        I am in snapshots
      </button>
      <span
        class="editIcons"
      >
        <i
          class="material-icons text-faded clickable"
        >
          settings
        </i>
        <i
          class="material-icons text-danger clickable"
        >
          close
        </i>
      </span>
    </li>
    <li
      class="editRow list-group-item"
    >
      <button
        class="btn btn-secondary"
        type="button"
      >
        I am in snapshots too
      </button>
      <span
        class="editIcons"
      >
        <i
          class="material-icons text-faded clickable"
        >
          settings
        </i>
        <i
          class="material-icons text-danger clickable"
        >
          close
        </i>
      </span>
    </li>
  </ul>
  <button
    class="wrapper addButton secondary medium"
    type="button"
  >
    <span
      class="wrapper"
    >
      <i
        class="material-icons icon isLeft medium"
      >
        add
      </i>
    </span>
    Add Button
  </button>
</div>
`;
